--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twitter_interface",
   "version": "1.0.0",
   "description": "A treehouse project",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
